Sun Aug 13 22:12:59 MEST 2000   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:

	Marc Lehmann kindly contributed code to add overloading support
	and to handle references to tied variables.

	Rewrote leading blurb about compatibility to make it clearer what
	"backward compatibility" is about: when I say 0.7 is backward
	compatible with 0.6, it means the revision 0.7 can read files
	produced by 0.6.

	Mention new Clone(3) extension in SEE ALSO.

	Was wrongly optimizing for "undef" values in hashes by not
	fully recursing: as a result, tied "undef" values were incorrectly
	serialized.

Sun Jul 30 12:59:17 MEST 2000   Raphael Manfredi <Raphael_Manfredi@pobox.com>

	First revision of Storable 0.7.

	The serializing format is new, known as version 2.0.  It is fully
	backward compatible with 0.6.  Earlier formats are deprecated and
	have not even been tested: next version will drop pre-0.6 format.

	Changes since 0.6@11:

	- Moved interface to the "beta" status.  Some tiny parts are still
	  subject to change, but nothing important enough to warrant an "alpha"
	  status any longer.

	- Slightly reduced the size of the Storable image by factorizing
	  object class names and removing final object storage notification due
	  to a redesign of the blessed object storing.

	- Classes can now redefine how they wish their instances to be serialized
	  and/or deep cloned.  Serializing hooks are written in Perl code.

	- The engine is now fully re-entrant.

Sun Apr  2 23:47:50 MEST 2000   Raphael Manfredi <Raphael_Manfredi@pobox.com>

. Description:

	Added provision to detect more recent binary formats, since
	the new upcoming Storable-0.7 will use a different format.
	In order to prevent attempting the de-serialization of newer
	formats by older versions, I'm adding this now to the 0.6 series.

	I'm expecting this revision to be the last of the 0.6 series.
	Unless it does not work with perl 5.6, which I don't use yet,
	and therefore against which I cannot test.
