@@ -1,4 +1,4 @@
-;# $Id: Storable.pm,v 0.7.1.1 2000/08/13 20:08:58 ram Exp $
+;# $Id: Storable.pm,v 0.7.1.2 2000/08/14 07:18:40 ram Exp $
 ;#
 ;#  Copyright (c) 1995-2000, Raphael Manfredi
 ;#  
@@ -6,6 +6,9 @@
 ;#  as specified in the README file that comes with the distribution.
 ;#
 ;# $Log: Storable.pm,v $
+;# Revision 0.7.1.2  2000/08/14 07:18:40  ram
+;# patch2: increased version number
+;#
 ;# Revision 0.7.1.1  2000/08/13 20:08:58  ram
 ;# patch1: mention new Clone(3) extension in SEE ALSO
 ;# patch1: contributor Marc Lehmann added overloading and ref to tied items
@@ -29,7 +32,7 @@ package Storable; @ISA = qw(Exporter DynaLoader);
 use AutoLoader;
 use vars qw($forgive_me $VERSION);
 
-$VERSION = '0.701';
+$VERSION = '0.702';
 *AUTOLOAD = \&AutoLoader::AUTOLOAD;		# Grrr...
 
 #
